<resources>
    <string name="app_name">GraveRegistryApp</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_now"><u>Sign Up Now</u></string>
    <string name="log_in">Log In</string>
    <string name="logo">logo</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in_now"><u>Log In Now</u></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_grave">Register Grave</string>
    <string name="welcome">Welcome</string>
    <string name="dashboard">Dashboard</string>
    <string name="user_name">User name</string>
    <string name="num_submissions">Number of Past Submissions: </string>
    <string name="choose_grave">Choose an entry to verify:</string>
    <string name="verify_accurate">Verify Entry as Accurate</string>
    <string name="change_submission">Suggest a Change</string>
    <string name="new_coordinates">Get New Coordinates</string>
    <string name="submit_change">Submit Suggested Changes</string>

    <string name="conflict" translatable="false" >Conflict</string>
    <string name="rank">Rank</string>
    <string name="middle_name">Middle Name/Initial</string>
    <string name="unit">Unit</string>
    <string name="sub_unit">Sub-unit</string>
    <string name="cemetery">Cemetery</string>
    <string name="gps_coordinates">GPS Coordinates</string>
    <string name="current_location">Current Coordinates: \nLatitude: Click \'Get Coordinates\'\nLongitude: Click \'Get Coordinates\'</string>
    <string name="flag_present">Flag Present?</string>
    <string name="submit_button">Submit</string>
    <string name="coordinates_button">Get Coordinates</string>
    <string name="bronze_holder_present">Bronze Holder Present?</string>
    <string name="condition">Select Condition</string>
    <string name="view_past_submissions">View Past Submissions</string>
    <string name="verify_grave" >Verify Grave</string>
    <string name="logout">Logout</string>
    <string name="birth_year_yyyy">Birth Year (YYYY)</string>
    <string name="death_year_yyyy">Death Year (YYYY)</string>
    <string-array name ="condition">
        <item>Select Condition</item>
        <item>Good</item>
        <item>Fair</item>
        <item>Poor</item>
        <item>Damaged</item>
    </string-array>
</resources>
