<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:textSize="16sp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/et_firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:hint="@string/first_name" />

    <TextView
        android:id="@+id/et_lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/et_firstName"
        android:layout_toEndOf="@id/et_firstName"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:hint="@string/last_name" />

    <TextView
        android:id="@+id/et_conflict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/conflict"
        android:layout_below="@id/et_firstName" />

    <TextView
        android:id="@+id/et_cemetery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/cemetery"
        android:layout_below="@id/et_conflict" />

</RelativeLayout>